--- a/index.html
+++ b/index.html
@@ -254,20 +254,22 @@
               <div class="project__wrapper--bg"></div>
               <div class="project__description">
                 <h3 class="project__description--title">
-                  Simple Landing Page
+                  NFT Project
                 </h3>
                 <h4 class="project__description--sub-title">
-                  Html, CSS, JavaScript
+                  Html, CSS, JavaScript, React, ThirdWeb
                 </h4>
                 <p class="project__description--para">
-                  Designed, developed and hosted this Simple Landing Page using semantic HTML5, JavaScript and CSS3 (+BEM) best practises.
+                  Designed, developed and hosted this functional NFT project by connecting to opensea's API via ThirdWeb.
+                  I enusred fast load times by compressing caching and lazy loading images as well as created a conversion 
+                  optimized project for Web 3.0.
                 </p>
                 <div class="project__description--links">
-                  <a href="https://github.com/davidbr4gg/davidbr4gg.github.io" target="_blank"
+                  <a href="https://juaniaroholmes.github.io/eportfolio/" target="_blank"
                     class="project__description--link">
                     <i class="fab fa-github"></i>
                   </a>
-                  <a href="https://davidbr4gg.github.io/" target="_blank" class="project__description--link">
+                  <a href="https://github.com/juaniaroholmes/eportfolio" target="_blank" class="project__description--link">
                     <i class="fas fa-link"></i>
                   </a>
                 </div>
